--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -1,40 +1,56 @@
 <%- include('../includes/head.ejs') %>
     <link rel="stylesheet" href="/css/forms.css">
     <link rel="stylesheet" href="/css/product.css">
-</head>
+    </head>
 
-<body>
-   <%- include('../includes/navigation.ejs') %>
+    <body>
+        <%- include('../includes/navigation.ejs') %>
 
-    <main>
-        <% if (errorMessage) { %>
-            <div class="user-message user-message--error">
-                <%= errorMessage %>
-            </div>
-            <% } %>
-        <form class="product-form" action="/admin/<% if (edit) { %>edit-product<% } else { %>add-product<% } %>" method="POST">
-            <div class="form-control">
-                <label for="title">Title</label>
-                <input class="<%= validationErrors.find(e => e.path === 'title') ? 'invalid' : '' %>" type="text" name="title" id="title" value="<% if (edit || hasError) { %><%= product.title %><% } %>">
-            </div>  
-            <div class="form-control">
-                <label for="imageUrl">Image URL</label>
-                <input class="<%= validationErrors.find(e => e.path === 'imageUrl') ? 'invalid' : '' %>" type="text" name="imageUrl" id="imageUrl" value="<% if (edit || hasError) { %><%= product.imageUrl %><% } %>">
-            </div>
-            <div class="form-control">
-                <label for="price">Price</label>
-                <input class="<%= validationErrors.find(e => e.path === 'price') ? 'invalid' : '' %>" type="number" name="price" id="price" step="0.01" value="<% if (edit || hasError) { %><%= product.price %><% } %>">
-            </div>
-            <div class="form-control">
-                <label for="description">Description</label>
-                <textarea class="<%= validationErrors.find(e => e.path === 'description') ? 'invalid' : '' %>" name="description" id="description" rows="5"><% if (edit || hasError) { %><%= product.description %><% } %></textarea>
-            </div>
-            <% if (edit) { %>
-                <input type="hidden" value="<%= product._id %>" name="productId">
-            <% } %>
-            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+            <main>
+                <% if (errorMessage) { %>
+                    <div class="user-message user-message--error">
+                        <%= errorMessage %>
+                    </div>
+                    <% } %>
+                        <form class="product-form"
+                            action="/admin/<% if (edit) { %>edit-product<% } else { %>add-product<% } %>" method="POST" enctype="multipart/form-data">
+                            <div class="form-control">
+                                <label for="title">Title</label>
+                                <input class="<%= validationErrors.find(e => e.path === 'title') ? 'invalid' : '' %>"
+                                    type="text" name="title" id="title"
+                                    value="<% if (edit || hasError) { %><%= product.title %><% } %>">
+                            </div>
+                            <!-- <div class="form-control">
+                                <label for="imageUrl">Image URL</label>
+                                <input class="<%= validationErrors.find(e => e.path === 'imageUrl') ? 'invalid' : '' %>"
+                                    type="text" name="imageUrl" id="imageUrl"
+                                    value="<% if (edit || hasError) { %><%= product.imageUrl %><% } %>">
+                            </div> -->
+                            <div class="form-control">
+                                <label for="image">Image</label>
+                                <input type="file" name="image" id="image">
+                            </div>
+                            <div class="form-control">
+                                <label for="price">Price</label>
+                                <input class="<%= validationErrors.find(e => e.path === 'price') ? 'invalid' : '' %>"
+                                    type="number" name="price" id="price" step="0.01"
+                                    value="<% if (edit || hasError) { %><%= product.price %><% } %>">
+                            </div>
+                            <div class="form-control">
+                                <label for="description">Description</label>
+                                <textarea
+                                    class="<%= validationErrors.find(e => e.path === 'description') ? 'invalid' : '' %>"
+                                    name="description" id="description"
+                                    rows="5"><% if (edit || hasError) { %><%= product.description %><% } %></textarea>
+                            </div>
+                            <% if (edit) { %>
+                                <input type="hidden" value="<%= product._id %>" name="productId">
+                                <% } %>
+                                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
 
-            <button class="btn" type="submit"><% if (edit) { %>Update Product<% } else { %>Add Product<% } %></button>
-        </form>
-    </main>
-<%- include('../includes/end.ejs') %>
+                                    <button class="btn" type="submit">
+                                        <% if (edit) { %>Update Product<% } else { %>Add Product<% } %>
+                                    </button>
+                        </form>
+            </main>
+            <%- include('../includes/end.ejs') %>
