--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -16,7 +16,7 @@
                                     </h1>
                                 </header>
                                 <div class="card__image">
-                                    <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
+                                    <img src="/<%= product.imageUrl %>" alt="<%= product.title %>">
                                 </div>
                                 <div class="card__content">
                                     <h2 class="product__price">$
@@ -28,14 +28,14 @@
                                 </div>
                                 <div class="card__actions">
 
-                                        <a href="/admin/edit-product/<%= product._id %>?edit=true" class="btn">Edit</a>
-                                    
-                                    <form action="/admin/delete-product" method="POST">
-                                        <input type="hidden" value="<%= product._id %>" name="productId">
-                                        <button class="btn" type="submit">Delete</button>
-                                        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                                    <a href="/admin/edit-product/<%= product._id %>?edit=true" class="btn">Edit</a>
 
-                                    </form>
+                                    <!-- <form action="/admin/delete-product" method="POST"> -->
+                                        <input type="hidden" value="<%= product._id %>" name="productId">
+                                        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                                        <button class="btn" type="submit" onclick="deleteProduct(this)">Delete</button>
+
+                                    <!-- </form> -->
 
                                 </div>
                             </article>
@@ -46,3 +46,4 @@
                         <% } %>
             </main>
             <%- include('../includes/end.ejs') %>
+            <script src="/js/admin.js"></script>
